src/app/globals.css
/* ... */
.sector-model .ant-modal-body input,
.sector-model .ant-modal-body input:focus {
  border: solid 1px #dee2e6 !important;
}

.ant-tree-checkbox-checked .ant-tree-checkbox-inner {
  background-color: #683ab7 !important;
  border-color: #683ab7 !important;
}

.ant-checkbox-indeterminate .ant-tree-checkbox-inner:after {
  background-color: #683ab7 !important;
}

.ant-picker-calendar-date-content .events .ant-badge-status-text {
  text-transform: capitalize !important;
}

iframe #WordViewerStatusBar {
  pointer-events: none !important;
}

.ndfHFb-c4YZDc-Wrql6b {
  display: none !important;
}

.ant-checkbox-checked.ant-checkbox-disabled .ant-checkbox-inner {
  background-color: #683ab78a !important;
}

.copy-button {
  max-height: 33px !important;
  padding-top: 3px !important;
  padding-bottom: 3px !important;
}

.active-badge {
  font-size: 12px;
  background-color: rgb(25, 135, 84) !important;
  padding: 5px 15px !important;
  color: #fff
}

.inactive-badge {
  background-color: rgb(220, 53, 69) !important;
  font-size: 12px;
  padding: 5px 15px !important;
  color: #fff
}

.table>:not(caption)>*>* {
  align-content: center !important;
}


.dropdown-toggle-bulk button{
  padding: 0px !important;
  background-color: transparent !important;
  color: #000  !important;
  border: none !important;
}
.searched-text em{
  background-color: #ece92d;
}





.custom-datepicker-popup .ant-picker-panel-container {
  max-height: 250px;
  overflow-y: auto;
}


.custom-datepicker-popup .ant-picker-panel-container::-webkit-scrollbar {
  width: 8px;
}
.custom-datepicker-popup .ant-picker-panel-container::-webkit-scrollbar-thumb {
  background: #d9d9d9;
  border-radius: 4px;
}


@media (max-width: 767px) {
  .custom-datepicker-popup .ant-picker-panel-container {
    max-height: 40vh;
    overflow-x: auto;
    max-width: 380px;
  }

  .custom-datepicker-popup .ant-picker-panel-container::-webkit-scrollbar {
    width: 4px;
  }
}
.ql-editor{
  white-space: unset;
}

